cmake_minimum_required (VERSION 3.0)
project (print_ip VERSION 1.0.$ENV{TRAVIS_BUILD_NUMBER})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Aleksei Zakharov")
SET(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

add_executable(print_ip print_ip.cpp)
set_property(TARGET print_ip PROPERTY CXX_STANDARD 17)
INSTALL(TARGETS print_ip RUNTIME DESTINATION bin)
INCLUDE(CPack)
